注册验证码

--- a/resources/lang/zh-CN.json
+++ b/resources/lang/zh-CN.json
@@ -5,5 +5,7 @@
     "Personal Center": "个人中心",
     "Editing materials": "编辑资料",
     "Design and coding": "设计和编码",
-    "Contact us": "联系我们"
+    "Contact us": "联系我们",
+    "getVerification Code": "点击图片重新获取验证码",
+    "Verification Code": "验证码"
 }
