编辑个人资料

--- a/resources/lang/zh-CN.json
+++ b/resources/lang/zh-CN.json
@@ -3,9 +3,23 @@
     "Corporate name": "湖南晌当当九牧管业有限公司",
     "Sign out": "退出",
     "Personal Center": "个人中心",
+    "Personal profile": "个人简介",
+    "Of Personal Center": " 的个人中心",
+    "Register in": "注册于",
     "Editing materials": "编辑资料",
+    "Editing Personal Data": "编辑个人资料",
     "Design and coding": "设计和编码",
+    "No data": "暂无数据 ~_~",
     "Contact us": "联系我们",
     "getVerification Code": "点击图片重新获取验证码",
-    "Verification Code": "验证码"
+    "User name": "用户名",
+    "Mail box": "邮 箱",
+    "Preservation": "保存",
+    "Verification Code": "验证码",
+    "local Errors occurred": "有错误发生：",
+    "success Personal Data Update Successful!": " 个人资料更新成功！",
+    "messages name required": "用户名不能为空。",
+    "messages name unique": "用户名已被占用，请重新填写",
+    "messages name regex": "用户名只支持英文、数字、横杠和下划线。",
+    "messages name between": "用户名必须介于 3 - 25 个字符之间。"
 }
