所有提示信息本地化处理 分为 local success messages

--- a/resources/lang/zh-CN.json
+++ b/resources/lang/zh-CN.json
@@ -1,23 +1,27 @@
 {
-    "Abbreviation": "九牧管业",
-    "Corporate name": "湖南晌当当九牧管业有限公司",
-    "Sign out": "退出",
-    "Personal Center": "个人中心",
-    "Personal profile": "个人简介",
-    "Of Personal Center": " 的个人中心",
-    "Register in": "注册于",
-    "Editing materials": "编辑资料",
-    "Editing Personal Data": "编辑个人资料",
-    "Design and coding": "设计和编码",
-    "No data": "暂无数据 ~_~",
-    "Contact us": "联系我们",
-    "getVerification Code": "点击图片重新获取验证码",
-    "User name": "用户名",
-    "Mail box": "邮 箱",
-    "Preservation": "保存",
-    "Verification Code": "验证码",
+    "local Abbreviation": "九牧管业",
+    "local Corporate name": "湖南晌当当九牧管业有限公司",
+    "local Sign out": "退出",
+    "local Personal Center": "个人中心",
+    "local Personal profile": "个人简介",
+    "local Of Personal Center": " 的个人中心",
+    "local Register in": "注册于",
+    "local Editing materials": "编辑资料",
+    "local Editing Personal Data": "编辑个人资料",
+    "local Design and coding": "设计和编码",
+    "local No data": "暂无数据 ~_~",
+    "local Contact us": "联系我们",
+    "local getVerification Code": "点击图片重新获取验证码",
+    "local User name": "用户名",
+    "local Mail box": "邮 箱",
+    "local Preservation": "保存",
+    "local Verification Code": "验证码",
     "local Errors occurred": "有错误发生：",
+    "success Mailbox Verification Successful": " 邮箱验证成功 ^_^",
     "success Personal Data Update Successful!": " 个人资料更新成功！",
+    "success Password Update Successful": " 密码更新成功，您已成功登录！",
+    "messages captcha required": "验证码不能为空",
+    "messages captcha captcha": "请输入正确的验证码",
     "messages name required": "用户名不能为空。",
     "messages name unique": "用户名已被占用，请重新填写",
     "messages name regex": "用户名只支持英文、数字、横杠和下划线。",
