上传头像  显示头像

--- a/resources/lang/zh-CN.json
+++ b/resources/lang/zh-CN.json
@@ -4,6 +4,7 @@
     "local Sign out": "退出",
     "local Personal Center": "个人中心",
     "local Personal profile": "个人简介",
+    "local User head": "用户头像",
     "local Of Personal Center": " 的个人中心",
     "local Register in": "注册于",
     "local Editing materials": "编辑资料",
