--- a/resources/lang/zh-CN.json
+++ b/resources/lang/zh-CN.json
@@ -1,6 +1,8 @@
 {
     "local Abbreviation": "九牧管业",
     "local Corporate name": "湖南晌当当九牧管业有限公司",
+    "local default description": "湖南晌当当九牧管业有限公司旗下所有产品，囊括九牧管业、响当当管业、PE-RT地暖管、PE-RT阻氧管、PP-R管道，耐高温聚乙烯PE-RT，无规共聚聚丙烯PP-R，配件及九牧管业生活周边，同时提供客户服务及售后支持。",
+    "local default keywords": "九牧管业,响当当管业,品质悦享生活,响当当九牧管业有限公司,PE-RT地暖管,PE-RT阻氧管,PP-R管道,PP-R,PE-RT",
     "local Sign out": "退出",
     "local Personal Center": "个人中心",
     "local Personal profile": "个人简介",
