--- a/resources/lang/zh-CN.json
+++ b/resources/lang/zh-CN.json
@@ -1,11 +1,11 @@
 {
     "local Abbreviation": "九牧管业",
-    "local Corporate name": "湖南晌当当九牧管业有限公司",
-    "local default description": "湖南晌当当九牧管业有限公司旗下所有产品，囊括九牧管业、响当当管业、PE-RT地暖管、PE-RT阻氧管、PP-R管道，耐高温聚乙烯PE-RT，无规共聚聚丙烯PP-R，配件及九牧管业生活周边，同时提供客户服务及售后支持。",
+    "local Corporate name": "湖南响当当九牧管业有限公司",
+    "local default description": "湖南响当当九牧管业有限公司旗下所有产品，囊括九牧管业、响当当管业、PE-RT地暖管、PE-RT阻氧管、PP-R管道，耐高温聚乙烯PE-RT，无规共聚聚丙烯PP-R，配件及九牧管业生活周边，同时提供客户服务及售后支持。",
     "local default keywords": "九牧管业,响当当管业,品质悦享生活,响当当九牧管业有限公司,PE-RT地暖管,PE-RT阻氧管,PP-R管道,PP-R,PE-RT",
     "local Company address": "华晨世纪广场",
     "local Production address": "生产地址:浙江省杭州市临杭工业园区",
-    "local Copyright": "湖南晌当当九牧管业有限公司© 2018-2019",
+    "local Copyright": "湖南响当当九牧管业有限公司© 2018-2019",
     "local Company email": " liuweihjyalms@163.com",
     "local Tel": "400-041-8868",
     "local Weixinqrcode": "微信公众号",
