oss images views

--- a/resources/lang/zh-CN.json
+++ b/resources/lang/zh-CN.json
@@ -1,4 +1,5 @@
 {
+    "local oss file images": "https://thitxdd.oss-cn-hangzhou.aliyuncs.com/",
     "local Abbreviation": "九牧管业",
     "local Corporate name": "湖南响当当九牧管业有限公司",
     "local default description": "湖南响当当九牧管业有限公司旗下所有产品，囊括九牧管业、响当当管业、PE-RT地暖管、PE-RT阻氧管、PP-R管道，耐高温聚乙烯PE-RT，无规共聚聚丙烯PP-R，配件及九牧管业生活周边，同时提供客户服务及售后支持。",
