百度翻译APPID env文件改动  地图AK

--- a/resources/lang/zh-CN.json
+++ b/resources/lang/zh-CN.json
@@ -7,7 +7,7 @@
     "local Company address": "华晨世纪广场",
     "local Production address": "生产地址:浙江省杭州市临杭工业园区",
     "local Copyright": "湖南响当当九牧管业有限公司© 2018-2019",
-    "local Company email": " liuweihjyalms@163.com",
+    "local Company email": " 18182106519@163.com",
     "local Tel": "400-041-8868",
     "local Weixinqrcode": "微信公众号",
     "local Sign out": "退出",
